<resources>
        <string name="app_name">Talk4Kids</string>
        <string name="login">Login</string>
        <string name="password">Password</string>
        <string name="loginHint">Enter a user name</string>
         <string name="hint">Compose Messages</string>
        <string name="btnLogin">Button</string>
        <string name="idPassWordText">Password</string>
        <string name="textView2">textView2</string>
        <string name="idLoginLabel">idLoginLabel</string>
        <string name="idLoginText">Login</string>
        <string name="loginButtonText">Login</string>
        <string name="typeMessages">Type message here</string>
        <string name="messages">messages</string>
        <string name="input">Enter Message</string>
         <string name="output">Receive Message</string>
        <string name="send">Send</string>
         <string name="btnSend">Send</string>
        <string name="errMessageLogin">Invalid Login.  Please retry.</string>
        <string name="errMessagePassword">Invalid Password. Please retry.</string>
</resources>
