<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.synergyinspired.talk4kids.MainActivity">


    <EditText
        android:id="@+id/input"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"

        android:layout_alignParentStart="true"
        android:background="#d0d3ee"
        android:gravity="top"
        android:hint="@string/hint"
        android:inputType="textLongMessage"
        android:textAlignment="center"
        tools:text="@string/input" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:layout_alignTop="@+id/input"
        android:layout_toEndOf="@+id/input"
        android:contentDescription="@string/send"
        android:onClick="onSendClick"
        android:text="@string/btnSend"
        tools:text="@string/btnSend" />


    <ListView
        android:id="@+id/messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input"

        android:layout_alignEnd="@+id/send"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:background="#e8e68f"
        android:entries="@id/messages"
        android:scrollbars="vertical" />

    </RelativeLayout>